fixed footer on small device

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -20,7 +20,7 @@
 }
 
 .footer {
-  height: 193px;
+  height: auto;
   background-color: #353535;
 }
 
