--- a/Sass/Layout/_footer.scss
+++ b/Sass/Layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer
 {
     
-    height: 193px;
+    height: auto;
     background-color: $color-footer;
     &__content
     {
